--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,5 +1,5 @@
 ---
-title: 'Best Practices for Single-Cell Analysis'
+title: 'In progress'
 date: 2024-11-27
 permalink: /posts/2012/08/blog-post-1/
 tags:
